--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         Dicoding's BlogPt
       </h1>nv
     </div>
+    <a id="hamburger" href="#">☰</a>
   </header>
   <nav id="drawer" class="nav">
     <ul class="nav__list">
@@ -26,6 +27,7 @@
       <li class="nav__item"><a href="#">Stories</a></li>
     </ul>
   </nav>
+
   <div class="hero">
     <div class="hero__inner">
       <h1 class="hero__title">Bangun Karirmu Sebagai Developer Profesional</h1>
@@ -34,6 +36,7 @@
     </div>
   </div>
   <main>
+
     <section class="content">
       <article class="headline">
         <figure class="headline__figure">
@@ -152,6 +155,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
+
 </body>
 
 </html>
